Added the hover effect for desktop screens

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </div>
         </div>
         <button id="lifeline" class="hidden">50/50 Lifeline</button>
+        <p id="message" class="hidden"></p>
         <button id="reset" class="hidden">Reset Game</button>
     </div>
     <audio id="background-music" loop>
